Exclude dragged window in tablet overview mode from occlusion tracking.

* Add ScopdExclude class.
 The window specified will be ignored in occlusion tracking process.
* Exclude the dragging window in overview mode.

Bug: 902074
Test: covered by unit tests.
  Manaully tested on slate and make sure that dragging window
  in tablet overview mode doesn't not trigger frame evictor.

Change-Id: I4312f2dbc1928ac7cbbd4eac562547e7009fdbc0
Reviewed-on: https://chromium-review.googlesource.com/c/1318360
Reviewed-by: François Doray <fdoray@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608157}
Former-commit-id: b8bda0294295e0d0345982fe7dc15c8235b75f27